# Distributed-task-queue

./: .gitignore  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  test_client.cpp
server/: CMakeLists.txt  Dockerfile  task_queue_server.cpp
worker/: .gitignore  CMakeLists.txt  Dockerfile  worker_node.cpp
